# rust-vscode-template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-audit.yml  ci.yml  rust-check-test.yml  rust-lint-fmt.yml  rust-nightly-check-test.yml
src/: lib.rs  main.rs
