[package]
name = "{{project-name}}"
version = "0.1.0"
# See: https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
# List of values: https://spdx.org/licenses/
license = "Unlicense"
authors = ["{{authors}}"]
edition = "2018"
# Delete next line when it is ready to be published
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
